--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     color: #64278f;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
+    margin: auto;
 }
 .calculator {
     padding: 10px;
