--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     margin: auto;
+    margin-top: 60px;
 }
 .calculator {
     padding: 10px;
@@ -19,6 +20,8 @@ body{
     height: 380px;
     width: 400px;
     margin: auto;
+    margin-top: 20px;
+    margin-bottom: 40px;
     background-color: #191b28;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
