--- a/style.css
+++ b/style.css
@@ -7,12 +7,14 @@ body{
 }
 #titleName{
     font-size: 40px;
+    width: 410px;
     font-weight: bolder;
     color: #64278f;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     margin: auto;
     margin-top: 60px;
+    background-color: black;
 }
 .calculator {
     padding: 10px;
