--- a/style.css
+++ b/style.css
@@ -1,26 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 
-body{
-    background-color: lightblue;
-    margin: auto;
-    
-}
-#titleName{
+
+.titleName{
     font-size: 40px;
-    width: 410px;
+    width: 420px;
+    height: 50px;
     font-weight: bolder;
     color: #64278f;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     margin: auto;
     margin-top: 60px;
-    background-color: black;
+    /* background-color: black; */
 }
 .calculator {
     padding: 10px;
     border-radius: 1em;
     height: 380px;
-    width: 400px;
+    width: 430px;
     margin: auto;
     margin-top: 20px;
     margin-bottom: 40px;
@@ -35,6 +32,8 @@ body{
     border-radius: 5px;
     width: 97%;
     height: 40px;
+    margin-left: 4px;
+    
 }
 #btn {
     background-color:#05b322;
@@ -44,10 +43,12 @@ input[type=button] {
     background-color: rgb(232, 66, 5);
     color: white;
     border: solid black .5px;
-    width: 100%;
+    width: 90%;
     border-radius: 5px;
     height: 40px;
     outline: none;
+    margin-left: 4px;
+    margin-right: 4px;
 }
 input:active[type=button] {
     background: #939292;
