--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 
 .titleName{
     font-size: 40px;
-    width: 420px;
-    height: 50px;
+    max-width: 420px;
+    width: 90%;
     font-weight: bolder;
     color: #64278f;
     text-align: center;
@@ -16,11 +16,13 @@
 .calculator {
     padding: 10px;
     border-radius: 1em;
-    height: 380px;
-    width: 430px;
+    height: 430px;;
+    max-width: 430px;
+    width: 90%;
+    
+    padding: 20px;
     margin: auto;
-    margin-top: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
     background-color: #191b28;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
